# barrel

./: README.md  pyproject.toml
.github/workflows/: test.yml
barrel/: __init__.py  core.py  install.py
scripts/: format  pre-commit  test
site/: combine.yml  requirements.txt
site/content/: index.html  install.py
