[tool.poetry]
name = "barrel"
version = "0.2.0"
description = ""
authors = ["Dropseed <python@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dropseed/barrel"
documentation = "https://github.com/dropseed/barrel"
repository = "https://github.com/dropseed/barrel"
# keywords = ["static", "site", "generator", "jinja"]

[tool.poetry.dependencies]
python = "^3.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
