[tool.poetry]
name = "barrel"
version = "0.3.0"
description = ""
authors = ["Dropseed <python@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dropseed/barrel"
documentation = "https://github.com/dropseed/barrel"
repository = "https://github.com/dropseed/barrel"
packages = [
    { include = "barrel" },
]
# keywords = ["static", "site", "generator", "jinja"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
